test/files/neg/t112706A.check
t112706A.scala:5: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: String
    case Tuple2(node,_) =>
         ^
one error found
